src/bindings/bindings_debug.rs

pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_RECTANGLE: Clay__ElementConfigType = 1;
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_BORDER_CONTAINER:
    Clay__ElementConfigType = 2;
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_FLOATING_CONTAINER:
    Clay__ElementConfigType = 4;
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_SCROLL_CONTAINER:
    Clay__ElementConfigType = 8;
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_IMAGE: Clay__ElementConfigType = 16;
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_TEXT: Clay__ElementConfigType = 32;
pub const Clay__ElementConfigType_CLAY__ELEMENT_CONFIG_TYPE_CUSTOM: Clay__ElementConfigType = 64;
pub type Clay__ElementConfigType = ::core::ffi::c_uchar;
pub const Clay_LayoutDirection_CLAY_LEFT_TO_RIGHT: Clay_LayoutDirection = 0;
pub const Clay_LayoutDirection_CLAY_TOP_TO_BOTTOM: Clay_LayoutDirection = 1;
pub type Clay_LayoutDirection = ::core::ffi::c_uchar;
pub const Clay_LayoutAlignmentX_CLAY_ALIGN_X_LEFT: Clay_LayoutAlignmentX = 0;
pub const Clay_LayoutAlignmentX_CLAY_ALIGN_X_RIGHT: Clay_LayoutAlignmentX = 1;
pub const Clay_LayoutAlignmentX_CLAY_ALIGN_X_CENTER: Clay_LayoutAlignmentX = 2;
pub type Clay_LayoutAlignmentX = ::core::ffi::c_uchar;
pub const Clay_LayoutAlignmentY_CLAY_ALIGN_Y_TOP: Clay_LayoutAlignmentY = 0;
pub const Clay_LayoutAlignmentY_CLAY_ALIGN_Y_BOTTOM: Clay_LayoutAlignmentY = 1;
pub const Clay_LayoutAlignmentY_CLAY_ALIGN_Y_CENTER: Clay_LayoutAlignmentY = 2;
pub type Clay_LayoutAlignmentY = ::core::ffi::c_uchar;
pub const Clay__SizingType_CLAY__SIZING_TYPE_FIT: Clay__SizingType = 0;
pub const Clay__SizingType_CLAY__SIZING_TYPE_GROW: Clay__SizingType = 1;
pub const Clay__SizingType_CLAY__SIZING_TYPE_PERCENT: Clay__SizingType = 2;
pub const Clay__SizingType_CLAY__SIZING_TYPE_FIXED: Clay__SizingType = 3;
pub type Clay__SizingType = ::core::ffi::c_uchar;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_ChildAlignment {
    pub x: Clay_LayoutAlignmentX,
    pub y: Clay_LayoutAlignmentY,
}
#[test]
fn bindgen_test_layout_Clay_ChildAlignment() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_ChildAlignment> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_ChildAlignment>(),
        2usize,
        concat!("Size of: ", stringify!(Clay_ChildAlignment))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_ChildAlignment>(),
        1usize,
        concat!("Alignment of ", stringify!(Clay_ChildAlignment))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ChildAlignment),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_ChildAlignment),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_SizingMinMax {
    pub min: f32,
    pub max: f32,
}
#[test]
fn bindgen_test_layout_Clay_SizingMinMax() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_SizingMinMax> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_SizingMinMax>(),
        8usize,
        concat!("Size of: ", stringify!(Clay_SizingMinMax))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_SizingMinMax>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_SizingMinMax))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).min) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_SizingMinMax),
            "::",
            stringify!(min)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).max) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_SizingMinMax),
            "::",
            stringify!(max)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_SizingAxis {
    pub __bindgen_anon_1: Clay_SizingAxis__bindgen_ty_1,
    pub type_: Clay__SizingType,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union Clay_SizingAxis__bindgen_ty_1 {
    pub sizeMinMax: Clay_SizingMinMax,
    pub sizePercent: f32,
}
#[test]
fn bindgen_test_layout_Clay_SizingAxis__bindgen_ty_1() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_SizingAxis__bindgen_ty_1> =
        ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_SizingAxis__bindgen_ty_1>(),
        8usize,
        concat!("Size of: ", stringify!(Clay_SizingAxis__bindgen_ty_1))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_SizingAxis__bindgen_ty_1>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_SizingAxis__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sizeMinMax) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_SizingAxis__bindgen_ty_1),
            "::",
            stringify!(sizeMinMax)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sizePercent) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_SizingAxis__bindgen_ty_1),
            "::",
            stringify!(sizePercent)
        )
    );
}
#[test]
fn bindgen_test_layout_Clay_SizingAxis() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_SizingAxis> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_SizingAxis>(),
        12usize,
        concat!("Size of: ", stringify!(Clay_SizingAxis))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_SizingAxis>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_SizingAxis))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_SizingAxis),
            "::",
            stringify!(type_)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_Sizing {
    pub width: Clay_SizingAxis,
    pub height: Clay_SizingAxis,
}
#[test]
fn bindgen_test_layout_Clay_Sizing() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_Sizing> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_Sizing>(),
        24usize,
        concat!("Size of: ", stringify!(Clay_Sizing))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_Sizing>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_Sizing))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).width) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Sizing),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).height) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Sizing),
            "::",
            stringify!(height)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_Padding {
    pub x: u16,
    pub y: u16,
}
#[test]
fn bindgen_test_layout_Clay_Padding() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_Padding> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_Padding>(),
        4usize,
        concat!("Size of: ", stringify!(Clay_Padding))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_Padding>(),
        2usize,
        concat!("Alignment of ", stringify!(Clay_Padding))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Padding),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_Padding),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Clay_LayoutConfig {
    pub sizing: Clay_Sizing,
    pub padding: Clay_Padding,
    pub childGap: u16,
    pub childAlignment: Clay_ChildAlignment,
    pub layoutDirection: Clay_LayoutDirection,
}
#[test]
fn bindgen_test_layout_Clay_LayoutConfig() {
    const UNINIT: ::core::mem::MaybeUninit<Clay_LayoutConfig> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<Clay_LayoutConfig>(),
        36usize,
        concat!("Size of: ", stringify!(Clay_LayoutConfig))
    );
    assert_eq!(
        ::core::mem::align_of::<Clay_LayoutConfig>(),
        4usize,
        concat!("Alignment of ", stringify!(Clay_LayoutConfig))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).sizing) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_LayoutConfig),
            "::",
            stringify!(sizing)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).padding) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_LayoutConfig),
            "::",
            stringify!(padding)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).childGap) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_LayoutConfig),
            "::",
            stringify!(childGap)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).childAlignment) as usize - ptr as usize },
        30usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_LayoutConfig),
            "::",
            stringify!(childAlignment)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).layoutDirection) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(Clay_LayoutConfig),
            "::",
            stringify!(layoutDirection)
        )
    );
}
extern "C" {
    pub static mut CLAY_LAYOUT_DEFAULT: Clay_LayoutConfig;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Clay_RectangleElementConfig {
    pub color: Clay_Color,
    pub cornerRadius: Clay_CornerRadius,
}
